@@ -37,7 +37,11 @@ WIDGET_DEFAULT = {
         "bar_gap": 2,
         "show_battery_charge": True,
         "font_color_battery_charge": "#FFFFFF",
-        "bkg_color_battery_charge": "#222222",
+        "bkg_color_battery_charge": "#2266CC",
+        "high_battery_threshold": 95,
+        "warning_color_high_battery": "#AA22AA",
+        "low_battery_threshold": 10,
+        "warning_color_low_battery": "#FF2200",
         "show_battery_drain": True,
         "font_color_battery_drain": "#FFFFFF",
         "bkg_color_battery_drain": "#222222",
@@ -50,8 +54,6 @@ WIDGET_DEFAULT = {
         "show_activation_timer": True,
         "font_color_activation_timer": "#FFFFFF",
         "bkg_color_activation_timer": "#222222",
-        "low_battery_threshold": 10,
-        "warning_color_low_battery": "#FF2200",
         "freeze_duration": 10,
         "column_index_battery_charge": 1,
         "column_index_battery_drain": 2,
@@ -881,6 +883,10 @@ WIDGET_DEFAULT = {
         "battery_bar_color": "#00CCFF",
         "battery_bar_color_regen": "#44FF00",
         "battery_bar_bkg_color": "#88222222",
+        "high_battery_threshold": 95,
+        "warning_color_high_battery": "#FF44FF",
+        "low_battery_threshold": 10,
+        "warning_color_low_battery": "#FF2200",
         "show_battery_reading": False,
         "battery_decimal_places": 1,
         "font_size_battery": 16,
